--- a/.gitmodules
+++ b/.gitmodules
@@ -3,3 +3,23 @@
 	url = https://github.com/r-universe-org/cran-to-git
 	shallow = true
 	branch = HEAD
+[submodule "meteoForecast"]
+	path = meteoForecast
+	url = https://github.com/oscarperpinan/meteoforecast
+	shallow = true
+	registered = true
+[submodule "rasterVis"]
+	path = rasterVis
+	url = https://github.com/oscarperpinan/rastervis
+	shallow = true
+	registered = true
+[submodule "solaR"]
+	path = solaR
+	url = https://github.com/oscarperpinan/solar
+	shallow = true
+	registered = true
+[submodule "tdr"]
+	path = tdr
+	url = https://github.com/oscarperpinan/tdr
+	shallow = true
+	registered = true
